ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserBreakStatement1.d/input.ts.stderr
error: A 'break' statement can only be used within an enclosing iteration or switch statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserBreakStatement1.d/input.ts:1:1
  |
1 | break;
  | ^^^^^^

